--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="styles.css">
+        <title>SE Factory - Want to become a software engineer__files</title>
     </head>
     <body>
         <div class="main">
@@ -112,6 +113,35 @@
                     <img src="imgs/FSWprog.png">
 
                 </div>
+          </div>
+
+          <!--------- Fifth page -------------->
+          <div class="fifth-page">
+                <div>
+                    <h2 id="tat"><span class="arrow"> > </span> Hire talent</h2>
+                </div>
+
+                <div class="hire-container">
+                    <h2>Become a Recruitment Partner</h2>
+                    <span id="title">
+                        <span class="arrow">220+</span> companies from over 
+                        <span class="arrow">10 </span>countries have joined our network since <span class="arrow">2016</span>
+                    </span>
+                    <ol>
+                        <li>Exclusive, direct, and streamlined access to our graduating cycles</li>
+                        <li>Candidate insights from instructors and personalized recommendations</li>
+                        <li>Interviews at will</li>
+                        <li>Tech talks participation and engagement with students opportunities </li>
+                    </ol>
+                    <span>Are you on the hunt for exceptional rising junior developers? Look no further than SE Factory!</span>
+                    <a href="#" id="contactUS">CONTACT US ></a>
+                </div>
+                <dic class="down-container">
+                    <span >Want to launch a local team? <a herf=#>check out</a> </span>
+                    <img src="imgs/HRFactory.png">
+                    
+                </dic>
+
 
 
 
