--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
                 </div>
           </div>
-
+        </div>
           <!--------- Fifth page -------------->
           <div class="fifth-page">
                 <div>
@@ -136,18 +136,44 @@
                     <span>Are you on the hunt for exceptional rising junior developers? Look no further than SE Factory!</span>
                     <a href="#" id="contactUS">CONTACT US ></a>
                 </div>
-                <dic class="down-container">
+                <div class="down-container">
                     <span >Want to launch a local team? <a herf=#>check out</a> </span>
                     <img src="imgs/HRFactory.png">
                     
-                </dic>
-
-
-
+                </div>
 
           </div>
+        </div>
+
+        <!----- sixth page ----->
+        <div class="sixth-page">
+            <div>
+                <h2><span class="arrow"> > </span> Testimonials</h2>
+            </div>
+
+            <div class="test-container">
+                <div class="test-left">
+                    <img src="imgs/quotes.png" id="quotes">
+                    <p id="parag">Growing up, I saw that every girl that had taken interest in<br>
+                    anything technical or scientific had been undermined and<br>
+                    underestimated in her field. That isn't fair, breaking this<br>
+                    stereotype is a must. The first step I took towards doing this<br>
+                    was to join SEF, a bootcamp that supported diversity and<br>inclusion.</p>
+                    <div class="indic">
+                        <div class="indic-left"><img src="imgs/Zeina.png" id="iconZ"> </div>
+                        <div class="indic-right"><h4> Zeina O.</h4> <span>> SEF alumna working at <span class="arrow">Poyesis</span></span> </div>
+
+                    </div>
+                </div>
+                <div class="test-right">
+                    <img src="imgs/Zeina.png">
+                </div>
+
+            </div>
+
 
 
         </div>
+
     </body>
 </html>
